Adicionando tag strong

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,5 +12,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, praesentium molestiae, quae iste possimus sint delectus obcaecati dolor id voluptatem ipsum expedita maxime, dolorum accusantium temporibus eos cupiditate ullam recusandae.</p>
+    <strong>Teste, atualizando conteúdo do meu repositório</strong>
 </body>
 </html>
